fixed toolbar rendering behind map, changed map zindex to -1

--- a/RCHIWebDash/RCHIWebDashBoard/src/components/map/map.css
+++ b/RCHIWebDash/RCHIWebDashBoard/src/components/map/map.css
@@ -2,6 +2,7 @@
     height: 75vh;
 }
 #myleafletmap{
+    z-index: -1;
     /* height: 600px;
     width: 600px; */
     
